add feature de update password, add middleware for verifytoken and docs
