# app/Http/Controllers/AuthController.php
@@ -5,13 +5,15 @@ namespace App\Http\Controllers;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Log;
 
-use App\Domain\UseCases\Auth\PrimaryAcessUseCase;
 use App\Domain\UseCases\Auth\LoginUseCase;
+use App\Domain\UseCases\Auth\PrimaryAcessUseCase;
+use App\Domain\UseCases\Auth\UpdatePasswordUseCase;
 
 class AuthController extends Controller {
     public function __construct(
         private LoginUseCase $loginUseCase,
-        private PrimaryAcessUseCase $primaryAcessUseCase
+        private PrimaryAcessUseCase $primaryAcessUseCase,
+        private UpdatePasswordUseCase $updatePasswordUseCase
     ){}
     public function login(Request $request){
         try {
@@ -25,7 +27,7 @@ class AuthController extends Controller {
 
         } catch (\Throwable $th) {
             Log::error($th->getMessage());
-            return response()->json(['msg' => 'E-mail ou senha incorretos'], 404);
+            return response()->json(['msg' => 'E-mail ou senha incorretos'], 401);
         }
     }
 
@@ -34,6 +36,22 @@ class AuthController extends Controller {
             $requestData = $request->only(['email', 'password', 'code']);
 
             $this->primaryAcessUseCase->execute($requestData['email'], $requestData['password'], $requestData['code']);
+
+            Log::info('Senha do usuário alterada com sucesso');
+
+            return response()->json(['msg' => 'Senha do usuário alterado com sucesso'], 200);
+
+        } catch (\Throwable $th) {
+            Log::error($th->getMessage());
+            return response()->json(['msg' => 'Error ao alterar senha do usuário'], 400);
+        }
+    }
+
+    public function updatePassword(Request $request){
+        try {
+            $requestData = $request->only(['email', 'password', 'code']);
+
+            $this->updatePasswordUseCase->execute($requestData['email'], $requestData['password'], $requestData['code']);
 
             Log::info('Senha do usuário alterada com sucesso');
 
